--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,14 @@
-DB_PASS=Audrey123@
+const mysql = require('mysql2');
+
+const connection = mysql.createConnection({
+  host: 'localhost',
+  user: 'voting_user',
+  password: '123456789',
+  database: 'online_voting'
+});
+
+connection.connect((err) => {
+  if (err) throw err;
+  console.log('Connected to the database!');
+});
+
