--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^8.16.1",
     "mysql2": "^3.3.2"
   },
   "devDependencies": {
