--- a/backend/.env
+++ b/backend/.env
@@ -1,14 +1,3 @@
-const mysql = require('mysql2');
-
-const connection = mysql.createConnection({
-  host: 'localhost',
-  user: 'voting_user',
-  password: '123456789',
-  database: 'online_voting'
-});
-
-connection.connect((err) => {
-  if (err) throw err;
-  console.log('Connected to the database!');
-});
-
+MONGO_URI=mongodb://127.0.0.1:27017/online_voting
+PORT=5000
+JWT_SECRET=your_very_secret_key
