--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.3.2"
   },
   "devDependencies": {
