--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
@@ -42,7 +43,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^2.2.19",
+    "vite": "^7.0.6"
   }
 }
