--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "mysql2": "^3.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "autoprefixer": "^10.4.21",
+    "nodemon": "^2.0.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
